--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,13 @@
     </div>
 
     <button>Log in</button>
+    
+    <div class="auth-footer">
+  <a href="{{ url_for('forgot_password') }}">
+    Forgot password?
+  </a>
+</div>
+
   </form>
 
   <p class="muted" style="margin-top:18px;text-align:center;">
