--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
   <title>{% block title %}Uknowme{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9988420021358515"
+     crossorigin="anonymous"></script>
+
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
