--- a/templates/register.html
+++ b/templates/register.html
@@ -36,6 +36,9 @@
         Already have an account?
         <a href="/login">Login</a>
       </p>
+      <p class="small text-muted">
+        Looking for more info? <a href="/">Visit the homepage</a>.
+      </p>
     </div>
   </div>
 </div>
