--- a/templates/login.html
+++ b/templates/login.html
@@ -27,6 +27,9 @@
       <div class="mt-3 small">
         <a href="/forgot-password">Forgot password?</a>
       </div>
+      <div class="mt-2 small text-muted">
+        New here? <a href="/register">Create an account</a>.
+      </div>
     </div>
   </div>
 </div>
